--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-terve
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&display=swap" rel="stylesheet">
+    <title>Portfolio</title>
+</head>
+<body>
+    <div class="container1">
+            <h1>Portfolioni</h1>
+            <p>Hei, olen Mishka Karvonen, 17-vuotias. Olen Kaukovainion OSAOn opiskelija ja opiskelen ohjelmistokehittäjäksi.</p>
+            <p>Olen ystävällinen ja tulen kaikkien kanssa toimeen.</p>
+            <p>Minua kiinnostaa pelien ja robottien koodaaminen</p>
+    </div>
+    <div class="container1">
+        <h2>Koulutukseni</h2>
+        <p>Olen suorittanut peruskoulun Länsituulen yläasteella.</p>
+        <p>Tällä hetkellä opiskelen toista lukuvuotta Kaukovainion OSAO:lla ohjelmistokehittäjäksi.</p>
+    </div>
+    <div class="container1">
+        <h2>Projektini</h2>
+        <ul>
+            <li>Ryhmätyö 2D-peliprojekti: <a href="https://github.com/Diag0n/Jotain-typeraa" >Klikkaa linkkiä</a></li>
+        </ul>
+    </div>
+    <div class="container1">
+        <h2>Taitoni</h2>
+        <ul>
+            <li>Osaan koodata käyttäen C#, javaScript, HTML ja hiukan C++</li>
+            <li>Olen käyttänyt ja koodannut erilaisia robotteja, kuten Go1 education robottikoira ja dji robomaster.</li>
+        </ul>
+    </div>
+
+    <div class="container2">
+        <h2>Yhteystiedot</h2>
+        <p>Email: <a href="mailto:mishkaraf@gmail.com">mishkaraf@gmail.com</a></p>
+        <p>Puhelin: +358 40 148 1530</p>
+        <p class="thankYou">Kiitos lukemisesta!</p>
+    </div>
+</body>
+</html>
