--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h2>Yhteystiedot</h2>
         <p>Email: <a href="mailto:mishkaraf@gmail.com">mishkaraf@gmail.com</a></p>
         <p>Puhelin: +358 40 148 1530</p>
+        <p>GitHubini: <a href="https://github.com/karvmis">GitHub</a> </p>
         <p class="thankYou">Kiitos lukemisesta!</p>
     </div>
 </body>
