added links and text

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container1">
             <h1>Portfolioni</h1>
-            <p>Hei, olen Mishka Karvonen, 17-vuotias. Olen Kaukovainion OSAOn opiskelija ja opiskelen ohjelmistokehittäjäksi.</p>
+            <p>Hei, olen Mishka Karvonen. Olen Kaukovainion OSAO:n opiskelija ja opiskelen ohjelmistokehittäjäksi.</p>
             <p>Olen ystävällinen ja tulen kaikkien kanssa toimeen.</p>
-            <p>Minua kiinnostaa pelien ja robottien koodaaminen</p>
+            <p>Minua kiinnostaa uuden oppiminen ja erityisesti pelien ja robottien koodaaminen</p>
     </div>
     <div class="container1">
         <h2>Koulutukseni</h2>
@@ -22,14 +22,14 @@
     <div class="container1">
         <h2>Projektini</h2>
         <ul>
-            <li>Ryhmätyö 2D-peliprojekti: <a href="https://github.com/Diag0n/Jotain-typeraa" >Klikkaa linkkiä</a></li>
+            <li>GitHubissa 2D-peliprojekti Ryhmätyö: <a href="https://github.com/Diag0n/Jotain-typeraa" >Klikkaa linkkiä</a></li>
         </ul>
     </div>
     <div class="container1">
         <h2>Taitoni</h2>
         <ul>
             <li>Osaan koodata käyttäen C#, javaScript, HTML ja hiukan C++</li>
-            <li>Olen käyttänyt ja koodannut erilaisia robotteja, kuten Go1 education robottikoira ja dji robomaster.</li>
+            <li>Olen käyttänyt ja koodannut erilaisia robotteja, kuten <a href="https://shop.unitree.com/products/unitreeyushutechnologydog-artificial-intelligence-companion-bionic-companion-intelligent-robot-go1-quadruped-robot-dog">Go1 education robottikoira</a>ja <a href="https://store.dji.com/fi/shop/robomasters">dji robomaster s1</a></li>
         </ul>
     </div>
 
