added text and fixed typos

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h1>Portfolioni</h1>
             <p>Hei, olen Mishka Karvonen. Olen Kaukovainion OSAO:n opiskelija ja opiskelen ohjelmistokehittäjäksi.</p>
             <p>Olen ystävällinen ja tulen kaikkien kanssa toimeen.</p>
+            <p>Osaan työskennellä yksin ja ryhmässä, enkä epäröi kysyä apua tarvittaessa.</p>
             <p>Minua kiinnostaa uuden oppiminen ja erityisesti pelien ja robottien koodaaminen</p>
     </div>
     <div class="container1">
         <h2>Koulutukseni</h2>
-        <p>Olen suorittanut peruskoulun Länsituulen yläasteella.</p>
         <p>Tällä hetkellä opiskelen toista lukuvuotta Kaukovainion OSAO:lla ohjelmistokehittäjäksi.</p>
     </div>
     <div class="container1">
@@ -29,7 +29,7 @@
         <h2>Taitoni</h2>
         <ul>
             <li>Osaan koodata käyttäen C#, javaScript, HTML ja hiukan C++</li>
-            <li>Olen käyttänyt ja koodannut erilaisia robotteja, kuten <a href="https://shop.unitree.com/products/unitreeyushutechnologydog-artificial-intelligence-companion-bionic-companion-intelligent-robot-go1-quadruped-robot-dog">Go1 education robottikoira</a>ja <a href="https://store.dji.com/fi/shop/robomasters">dji robomaster s1</a></li>
+            <li>Olen käyttänyt ja koodannut erilaisia robotteja, kuten <a href="https://shop.unitree.com/products/unitreeyushutechnologydog-artificial-intelligence-companion-bionic-companion-intelligent-robot-go1-quadruped-robot-dog">Go1 education robottikoira</a> ja <a href="https://store.dji.com/fi/shop/robomasters">dji robomaster s1</a></li>
         </ul>
     </div>
 
