--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="container1">
         <h2>Koulutukseni</h2>
+        <p>Valmistuin peruskoulusta 2023 kesällä Länsituulen koulusta.</p>
         <p>Tällä hetkellä opiskelen toista lukuvuotta Kaukovainion OSAO:lla ohjelmistokehittäjäksi.</p>
     </div>
     <div class="container1">
